removed list of prices in 4h window